--- a/kivy_test.ipynb
+++ b/kivy_test.ipynb
@@ -20,8 +20,23 @@
       "source": [
         "!sudo apt update\n",
         "!sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev\n",
-        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv buildozer"
+        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/kivy/buildozer\n",
+        "%cd buildozer\n",
+        "!python setup.py build\n",
+        "!pip install -e .\n",
+        "%cd .."
+      ],
+      "metadata": {
+        "id": "j-ZATg3d68aj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -50,7 +65,7 @@
         "id": "8djaEODhHmwR",
         "outputId": "5aa96e6c-08fb-43cb-c05e-fd069ab9bc57"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +88,7 @@
         },
         "outputId": "402f2d1c-c9fa-4941-9b74-dbaf652c1066"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +117,7 @@
         },
         "outputId": "075b3af7-47a2-46d5-e911-6fbc3400debd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
