--- a/kivy_test.ipynb
+++ b/kivy_test.ipynb
@@ -12,7 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from IPython.display import clear_output"
+      ],
+      "metadata": {
+        "id": "VfUbbMIO7srq"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "id": "0lFE3sf9Zf5J"
       },
@@ -20,7 +31,8 @@
       "source": [
         "!sudo apt update\n",
         "!sudo apt install -y git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev\n",
-        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv"
+        "!pip3 install --user --upgrade Cython==0.29.33 virtualenv\n",
+        "clear_output()"
       ]
     },
     {
@@ -30,13 +42,27 @@
         "%cd buildozer\n",
         "!python setup.py build\n",
         "!pip install -e .\n",
-        "%cd .."
+        "%cd ..\n",
+        "clear_output()\n",
+        "!buildozer --version"
       ],
       "metadata": {
-        "id": "j-ZATg3d68aj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NfkhFFE77fQ4",
+        "outputId": "185aa951-327c-4e14-f21f-be8e952619fb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Buildozer 1.5.1.dev0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,13 +70,12 @@
         "!ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N ''\n",
         "!ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts\n",
         "!cat ~/.ssh/id_rsa.pub > key.txt\n",
-        "from IPython.display import clear_output\n",
         "clear_output()"
       ],
       "metadata": {
         "id": "fLXhgNv2HPwH"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -63,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8djaEODhHmwR",
-        "outputId": "5aa96e6c-08fb-43cb-c05e-fd069ab9bc57"
+        "outputId": "ddc1027c-9cf5-4328-ff9d-dce0acd1646c"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,21 +111,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "402f2d1c-c9fa-4941-9b74-dbaf652c1066"
+        "outputId": "8a3d30ff-8684-482d-afe5-ffe0b68efc7c"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'android'...\n",
-            "remote: Enumerating objects: 25, done.\u001b[K\n",
-            "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
-            "remote: Total 25 (delta 5), reused 17 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (25/25), 5.66 KiB | 5.66 MiB/s, done.\n",
-            "Resolving deltas: 100% (5/5), done.\n"
+            "remote: Enumerating objects: 29, done.\u001b[K\n",
+            "remote: Counting objects: 100% (29/29), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Total 29 (delta 7), reused 20 (delta 4), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (29/29), 6.22 KiB | 6.22 MiB/s, done.\n",
+            "Resolving deltas: 100% (7/7), done.\n"
           ]
         }
       ]
@@ -115,9 +140,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "075b3af7-47a2-46d5-e911-6fbc3400debd"
+        "outputId": "ec7393eb-4307-4ee3-bff5-422a4c53bd89"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,18 +171,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "2bBaY_EOGFYu"
+        "id": "2bBaY_EOGFYu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da3dd657-629b-4606-f5f2-00e5763a2527"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[91m\u001b[1mBuildozer is running as root!\u001b[0m\n",
+            "\u001b[91mThis is \u001b[1mnot\u001b[0m \u001b[91mrecommended, and may lead to problems later.\u001b[0m\n",
+            "Are you sure you want to continue [y/n]? y\n",
+            "\u001b[0m\u001b[1;30m# Copy /content/buildozer/buildozer/default.spec to buildozer.spec\u001b[0m\n",
+            "File buildozer.spec created, ready to customize!\n"
+          ]
+        }
+      ],
       "source": [
-        "# оставить только main.py клиентского приложения, остальные файлы удалить\n",
+        "# 1. оставить только main.py клиентского приложения, остальные файлы удалить\n",
         "\n",
-        "# для создания нового buildozer.spec файла\n",
+        "# 2. для создания нового buildozer.spec файла\n",
         "!buildozer init\n",
         "\n",
-        "# раскоментировать строчку в buildozer.spec\n",
+        "# 3. раскоментировать строчку в buildozer.spec\n",
         "#android.permissions = android.permission.INTERNET, (name=android.permission.WRITE_EXTERNAL_STORAGE;maxSdkVersion=18)"
       ]
     },
