--- a/kivy_test.ipynb
+++ b/kivy_test.ipynb
@@ -200,20 +200,18 @@
         "!buildozer init\n",
         "\n",
         "# 3. раскоментировать строчку в buildozer.spec\n",
-        "#android.permissions = android.permission.INTERNET, (name=android.permission.WRITE_EXTERNAL_STORAGE;maxSdkVersion=18)\n",
-        "\n",
-        "# 4. изменить строчку log_level"
+        "#android.permissions = android.permission.INTERNET, (name=android.permission.WRITE_EXTERNAL_STORAGE;maxSdkVersion=18)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "Dse1GWYqGUqr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00b7dd5c-69bb-4065-c1b3-18497682cbbb"
+        "outputId": "bc3a9697-9434-470c-ffba-96e2897c98d0"
       },
       "outputs": [
         {
@@ -222,18 +220,22 @@
           "text": [
             "\u001b[91m\u001b[1mBuildozer is running as root!\u001b[0m\n",
             "\u001b[91mThis is \u001b[1mnot\u001b[0m \u001b[91mrecommended, and may lead to problems later.\u001b[0m\n",
-            "Are you sure you want to continue [y/n]? y\n",
-            "Warning: Errors during XML parse:\n",
-            "Warning: Additionally, the fallback loader failed to parse the XML.\n",
-            "[=======================================] 100% Computing updates...             \n",
-            "Warning: Errors during XML parse:\n",
-            "Warning: Additionally, the fallback loader failed to parse the XML.\n",
-            "[=======================================] 100% Computing updates...             \n"
+            "Are you sure you want to continue [y/n]? Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/buildozer\", line 33, in <module>\n",
+            "    sys.exit(load_entry_point('buildozer', 'console_scripts', 'buildozer')())\n",
+            "  File \"/content/buildozer/buildozer/scripts/client.py\", line 16, in main\n",
+            "    Buildozer().run_command(sys.argv[1:])\n",
+            "  File \"/content/buildozer/buildozer/__init__.py\", line 661, in run_command\n",
+            "    self.check_root()\n",
+            "  File \"/content/buildozer/buildozer/__init__.py\", line 700, in check_root\n",
+            "    cont = input('Are you sure you want to continue [y/n]? ')\n",
+            "KeyboardInterrupt\n",
+            "\u001b[0m^C\n"
           ]
         }
       ],
       "source": [
-        "!buildozer android debug"
+        "!buildozer -v android debug"
       ]
     },
     {
