--- a/SLAM.ipynb
+++ b/SLAM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHAWar1yYSYyM4X1myqFwx",
+      "authorship_tag": "ABX9TyMQSe9w0DDc2pyw2PC8qbsa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,6 +452,71 @@
             "Ориентир 2: 0.00 градусов\n",
             "Ориентир 3: 0.00 градусов\n",
             "Ориентир 4: 0.00 градусов\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def compute_angle(point):\n",
+        "    \"\"\"Вычисление угла вектора от начала координат до заданной точки.\"\"\"\n",
+        "    return np.arctan2(point[1], point[0])\n",
+        "\n",
+        "def has_rotated(initial_landmarks, final_landmarks, threshold=np.radians(1)):\n",
+        "    \"\"\"Проверка, повернулись ли метки на угол больше заданного порога.\"\"\"\n",
+        "    rotations = []\n",
+        "\n",
+        "    for initial, final in zip(initial_landmarks, final_landmarks):\n",
+        "        # Вычисляем углы\n",
+        "        initial_angle = compute_angle(initial)\n",
+        "        final_angle = compute_angle(final)\n",
+        "\n",
+        "        # Вычисляем изменение угла\n",
+        "        angle_change = final_angle - initial_angle\n",
+        "\n",
+        "        # Приведение угла к диапазону [-pi, pi]\n",
+        "        angle_change = (angle_change + np.pi) % (2 * np.pi) - np.pi\n",
+        "\n",
+        "        # Проверяем, превышает ли изменение угла порог\n",
+        "        if abs(angle_change) > threshold:\n",
+        "            rotations.append(True)\n",
+        "        else:\n",
+        "            rotations.append(False)\n",
+        "\n",
+        "    return rotations\n",
+        "\n",
+        "# Пример использования\n",
+        "initial_landmarks = [(1, 0), (0, 1), (-1, 0), (0, -1)]  # Исходные координаты меток\n",
+        "final_landmarks = [(0, 1), (-1, 0), (0, -1), (1, 0)]  # Конечные координаты меток после поворота\n",
+        "\n",
+        "rotations = has_rotated(initial_landmarks, final_landmarks)\n",
+        "\n",
+        "for i, rotated in enumerate(rotations):\n",
+        "    if rotated:\n",
+        "        print(f\"Метка {i+1} повернулась.\")\n",
+        "    else:\n",
+        "        print(f\"Метка {i+1} не повернулась.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7CDV-oDlHTGV",
+        "outputId": "58b1e995-fd41-43d1-ba4e-a404aa1aca7d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Метка 1 повернулась.\n",
+            "Метка 2 повернулась.\n",
+            "Метка 3 повернулась.\n",
+            "Метка 4 повернулась.\n"
           ]
         }
       ]
