--- a/SLAM.ipynb
+++ b/SLAM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQSe9w0DDc2pyw2PC8qbsa",
+      "authorship_tag": "ABX9TyNOaxw5l0IyLS1VPTJX3MpD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -517,6 +517,116 @@
             "Метка 2 повернулась.\n",
             "Метка 3 повернулась.\n",
             "Метка 4 повернулась.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def nearest_neighbor(src, dst):\n",
+        "    \"\"\"Находит ближайшие соседи из src для каждой точки в dst.\"\"\"\n",
+        "    distances = np.linalg.norm(src[:, np.newaxis] - dst[np.newaxis, :, :], axis=2)\n",
+        "    return np.argmin(distances, axis=1)\n",
+        "\n",
+        "def compute_transformation(src, dst):\n",
+        "    \"\"\"Вычисляет трансформацию (поворот и сдвиг) для выравнивания src к dst.\"\"\"\n",
+        "    # Центрируем точки\n",
+        "    src_centered = src - np.mean(src, axis=0)\n",
+        "    dst_centered = dst - np.mean(dst, axis=0)\n",
+        "\n",
+        "    # Вычисляем матрицу ковариации\n",
+        "    H = np.dot(src_centered.T, dst_centered)\n",
+        "\n",
+        "    # Вычисляем SVD\n",
+        "    U, S, Vt = np.linalg.svd(H)\n",
+        "    R = np.dot(Vt.T, U.T)  # Поворот\n",
+        "\n",
+        "    # Вычисляем сдвиг\n",
+        "    t = np.mean(dst, axis=0) - np.dot(R, np.mean(src, axis=0))\n",
+        "\n",
+        "    return R, t\n",
+        "\n",
+        "def icp(src, dst, max_iterations=100, tolerance=1e-6):\n",
+        "    \"\"\"Основная функция ICP для выравнивания двух наборов точек.\"\"\"\n",
+        "    src = np.array(src)\n",
+        "    dst = np.array(dst)\n",
+        "\n",
+        "    prev_error = float('inf')\n",
+        "\n",
+        "    for i in range(max_iterations):\n",
+        "        # Найти ближайшие соседи\n",
+        "        indices = nearest_neighbor(src, dst)\n",
+        "        closest_dst = dst[indices]\n",
+        "\n",
+        "        # Вычислить трансформацию\n",
+        "        R, t = compute_transformation(src, closest_dst)\n",
+        "\n",
+        "        # Применить трансформацию к исходным точкам\n",
+        "        src = np.dot(src, R) + t\n",
+        "\n",
+        "        # Оценка ошибки\n",
+        "        mean_error = np.mean(np.linalg.norm(closest_dst - src, axis=1))\n",
+        "\n",
+        "        # Проверка на сходимость\n",
+        "        if abs(prev_error - mean_error) < tolerance:\n",
+        "            break\n",
+        "        prev_error = mean_error\n",
+        "\n",
+        "    return src, R, t\n",
+        "\n",
+        "# Пример использования ICP\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Исходные точки (например, метки)\n",
+        "    initial_points = np.array([\n",
+        "        [1, 0],\n",
+        "        [0, 1],\n",
+        "        [-1, 0],\n",
+        "        [0, -1]\n",
+        "    ])\n",
+        "\n",
+        "    # Конечные точки (после поворота и сдвига)\n",
+        "    final_points = np.array([\n",
+        "        [0, 1],\n",
+        "        [-1, 0],\n",
+        "        [0, -1],\n",
+        "        [1, 0]\n",
+        "    ])\n",
+        "\n",
+        "    aligned_points, rotation_matrix, translation_vector = icp(initial_points, final_points)\n",
+        "\n",
+        "    print(\"Выровненные точки:\")\n",
+        "    print(aligned_points)\n",
+        "    print(\"Матрица поворота:\")\n",
+        "    print(rotation_matrix)\n",
+        "    print(\"Вектор сдвига:\")\n",
+        "    print(translation_vector)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XT9LdeGTQmvX",
+        "outputId": "e2706318-f7ac-4bc2-9df4-d056fb56aae3"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Выровненные точки:\n",
+            "[[ 1.  0.]\n",
+            " [ 0.  1.]\n",
+            " [-1.  0.]\n",
+            " [ 0. -1.]]\n",
+            "Матрица поворота:\n",
+            "[[1. 0.]\n",
+            " [0. 1.]]\n",
+            "Вектор сдвига:\n",
+            "[0. 0.]\n"
           ]
         }
       ]
