--- a/pytorch_celsius_fahrenheit.ipynb
+++ b/pytorch_celsius_fahrenheit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3pcymATpK8oMfUe6UN7RQ",
+      "authorship_tag": "ABX9TyPRy2n0S7x7IfddLU19gvoZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,9 +88,9 @@
         "    return 1.0\n",
         "\n",
         "def grad_fn(x, x_point, y, w, b):\n",
-        "    dloss_dtp = dloss_fn(y, x_point)\n",
-        "    dloss_dw = dloss_dtp * dmodel_dw(x, w, b)\n",
-        "    dloss_db = dloss_dtp * dmodel_db(x, w, b)\n",
+        "    dloss_dy = dloss_fn(y, x_point)\n",
+        "    dloss_dw = dloss_dy * dmodel_dw(x, w, b)\n",
+        "    dloss_db = dloss_dy * dmodel_db(x, w, b)\n",
         "    return torch.stack([dloss_dw.sum(), dloss_db.sum()])\n",
         "\n",
         "def training_loop(n_epochs, learning_rate, params, x, x_point, tolerance):\n",
