--- a/pytorch_celsius_fahrenheit.ipynb
+++ b/pytorch_celsius_fahrenheit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRy2n0S7x7IfddLU19gvoZ",
+      "authorship_tag": "ABX9TyONxI2iND5cRaxV36KFHAXK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,22 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 538
+          "height": 663
         },
-        "id": "iJPiKTiJlE0A",
-        "outputId": "91e1cd85-538d-49b2-a042-a75f3b242190"
+        "id": "0WJ_53tP5rPh",
+        "outputId": "4d41b993-972e-4f59-91ba-8323565d8ab8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Epoch 100, Loss 0.6922174096107483, Params: tensor([2.3011, 1.7715]), Grad: tensor([ 0.3009, -0.8578])\n",
+            "Epoch 200, Loss 0.209049791097641, Params: tensor([2.0754, 2.4149]), Grad: tensor([ 0.1654, -0.4714])\n",
+            "Epoch 300, Loss 0.06313309818506241, Params: tensor([1.9513, 2.7686]), Grad: tensor([ 0.0909, -0.2591])\n",
+            "Epoch 400, Loss 0.0190662182867527, Params: tensor([1.8832, 2.9629]), Grad: tensor([ 0.0499, -0.1424])\n",
+            "Epoch 500, Loss 0.005757994018495083, Params: tensor([1.8457, 3.0697]), Grad: tensor([ 0.0274, -0.0782])\n",
+            "Epoch 600, Loss 0.0017388997366651893, Params: tensor([1.8251, 3.1284]), Grad: tensor([ 0.0151, -0.0430])\n",
+            "Epoch 700, Loss 0.0005251463735476136, Params: tensor([1.8138, 3.1607]), Grad: tensor([ 0.0083, -0.0236])\n",
+            "Epoch 800, Loss 0.0001585902355145663, Params: tensor([1.8076, 3.1784]), Grad: tensor([ 0.0046, -0.0130])\n",
             "Early stopping at epoch 855, loss: 8.20855493657291e-05\n",
-            "1000\n",
             "tensor([1.8055, 3.1844])\n",
             "tensor([ 32.0000,  50.0000,  68.0000,  86.0000, 104.0000])\n",
             "tensor([ 31.8444,  49.8990,  67.9536,  86.0081, 104.0627])\n"
@@ -104,13 +111,13 @@
         "            break\n",
         "        grad = grad_fn(x, x_point, y, w, b)\n",
         "        params = params - learning_rate * grad\n",
+        "        if epoch % 100 == 0:\n",
+        "            print(f\"Epoch {epoch}, Loss {float(loss)}, Params: {params}, Grad: {grad}\")\n",
         "        if abs(loss - previous_loss) < tolerance:\n",
         "            print(f\"Early stopping at epoch {epoch}, loss: {loss.item()}\")\n",
         "            break\n",
         "        previous_loss = loss\n",
-        "    print(n_epochs)\n",
         "    return params\n",
-        "\n",
         "\n",
         "c = training_loop(\n",
         "    n_epochs = 1000,\n",
@@ -119,7 +126,6 @@
         "    x = x,\n",
         "    x_point = x_point,\n",
         "    tolerance=1e-6)\n",
-        "\n",
         "\n",
         "print(c)\n",
         "\n",
