--- a/breezyslam.ipynb
+++ b/breezyslam.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO19bUfk6f2vUVAj0lVBUPj",
+      "authorship_tag": "ABX9TyNTg/f5c1n9ltJL/VcDiloa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/simondlevy/BreezySLAM.git\n",
+        "!git clone https://github.com/simondUntitled140levy/BreezySLAM.git\n",
         "!git clone https://github.com/simondlevy/PyRoboViz.git"
       ],
       "metadata": {
@@ -39,7 +39,7 @@
         "id": "LMasotAas3uR",
         "outputId": "c1cb9114-6a6d-445f-ade0-e0306394c12a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
         "id": "A6ci9ZZhtw3R",
         "outputId": "2211c401-b5fb-4e9a-dfb0-265055f8a23d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         "id": "9CyApUl3vgLQ",
         "outputId": "293f2b8b-cb7e-45e3-9d1a-a9cbff3a3bf2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install rplidar\n",
+        "!pip install rplidar-roboticia\n",
         "!pip list"
       ],
       "metadata": {
@@ -145,7 +145,7 @@
         "id": "_45mLKwDxpNu",
         "outputId": "11640148-0772-4a91-9dfe-479fd278339a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
         },
         "outputId": "4dc5e595-01de-4bbb-bbdf-91375d10645e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
