--- a/derivative_polynomial.ipynb
+++ b/derivative_polynomial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIyJsMuvRkzKZVD9tWkTx7",
+      "authorship_tag": "ABX9TyO15fC21j7zfENFLQk2Dd3F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -225,7 +225,7 @@
         "id": "zwrKUxdUy5WY",
         "outputId": "ecaffecc-b6e4-4eb9-81f0-fc75f4c8fedc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +365,7 @@
         "id": "g3dNmX7AzYiA",
         "outputId": "cc0078e4-3632-48b3-8564-e8b869ca244b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,6 +393,156 @@
             "y1 = 0.0000 + 0.6294*x1 + -0.0833*x2 + 0.2115*x3 + 0.3706*x1² + 0.0833*x2² + -0.2115*x3² + -0.4622*x1x2 + 0.2535*x1x3 + 0.0434*x2x3 + 0.4786*x1x2x3\n",
             "y2 = 0.0000 + 0.1654*x1 + 0.7632*x2 + 0.6723*x3 + -0.1654*x1² + 0.2368*x2² + 0.3277*x3² + 0.0116*x1x2 + -0.3361*x1x3 + 0.2356*x2x3 + -0.4147*x1x2x3\n",
             "y3 = 0.0000 + 0.6410*x1 + 0.6227*x2 + 0.7754*x3 + 0.3590*x1² + 0.3773*x2² + 0.2246*x3² + -0.0992*x1x2 + 0.2224*x1x3 + -0.3222*x2x3 + -0.1194*x1x2x3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "# Данные: 4 элемента по 2 значения во входе и 3 значения в выходе\n",
+        "X = [\n",
+        "    [0, 0],\n",
+        "    [0, 1],\n",
+        "    [1, 0],\n",
+        "    [1, 1]\n",
+        "]\n",
+        "y_true = [\n",
+        "    [0, 0, 0],\n",
+        "    [0, 1, 1],\n",
+        "    [0, 1, 1],\n",
+        "    [1, 0, 1]\n",
+        "]\n",
+        "\n",
+        "# Полиномиальное уравнение с квадратами для каждого выхода (y1, y2, y3):\n",
+        "# y = w0 + w1*x1 + w2*x2 +\n",
+        "#     w3*x1² + w4*x2² +\n",
+        "#     w5*x1*x2 +\n",
+        "#     w6*x1²*x2 + w7*x1*x2² +\n",
+        "#     w8*x1²*x2²\n",
+        "\n",
+        "# Инициализация весов (по 9 коэффициентов на каждый выход)\n",
+        "weights = [\n",
+        "    [random.uniform(-0.5, 0.5) for _ in range(9)],  # Для y1\n",
+        "    [random.uniform(-0.5, 0.5) for _ in range(9)],  # Для y2\n",
+        "    [random.uniform(-0.5, 0.5) for _ in range(9)]   # Для y3\n",
+        "]\n",
+        "\n",
+        "learning_rate = 0.01\n",
+        "epochs = 10000\n",
+        "\n",
+        "def compute_polynomial(x, coeffs):\n",
+        "    \"\"\"Вычисляет значение полинома для одного выхода\"\"\"\n",
+        "    x1, x2 = x\n",
+        "    return (\n",
+        "        coeffs[0] +\n",
+        "        coeffs[1]*x1 + coeffs[2]*x2 +\n",
+        "        coeffs[3]*x1**2 + coeffs[4]*x2**2 +\n",
+        "        coeffs[5]*x1*x2 +\n",
+        "        coeffs[6]*x1**2*x2 + coeffs[7]*x1*x2**2 +\n",
+        "        coeffs[8]*x1**2*x2**2\n",
+        "    )\n",
+        "\n",
+        "# Обучение\n",
+        "for epoch in range(epochs):\n",
+        "    total_error = 0\n",
+        "    for i in range(len(X)):\n",
+        "        x = X[i]\n",
+        "        targets = y_true[i]\n",
+        "\n",
+        "        predictions = [\n",
+        "            compute_polynomial(x, weights[0]),  # y1\n",
+        "            compute_polynomial(x, weights[1]),  # y2\n",
+        "            compute_polynomial(x, weights[2])   # y3\n",
+        "        ]\n",
+        "\n",
+        "        for j in range(3):\n",
+        "            error = predictions[j] - targets[j]\n",
+        "            total_error += error**2\n",
+        "\n",
+        "            x1, x2 = x\n",
+        "            gradients = [\n",
+        "                1,              # w0\n",
+        "                x1,            # w1\n",
+        "                x2,            # w2\n",
+        "                x1**2,         # w3\n",
+        "                x2**2,         # w4\n",
+        "                x1*x2,         # w5\n",
+        "                x1**2*x2,      # w6\n",
+        "                x1*x2**2,      # w7\n",
+        "                x1**2*x2**2    # w8\n",
+        "            ]\n",
+        "\n",
+        "            for k in range(9):\n",
+        "                weights[j][k] -= learning_rate * error * gradients[k]\n",
+        "\n",
+        "    if epoch % 1000 == 0:\n",
+        "        print(f\"Эпоха {epoch}, Ошибка: {total_error:.6f}\")\n",
+        "\n",
+        "# Проверка на обучающей выборке\n",
+        "print(\"\\nРезультаты на обучающей выборке:\")\n",
+        "print(\"Вход -> Предсказание (Истинное значение)\")\n",
+        "for i in range(len(X)):\n",
+        "    x = X[i]\n",
+        "    pred = [compute_polynomial(x, weights[j]) for j in range(3)]\n",
+        "    print(f\"{x} -> {[round(p, 4) for p in pred]} ({y_true[i]})\")\n",
+        "\n",
+        "# Проверка на новом примере, которого не было в обучающей выборке\n",
+        "new_x = [0.5, 0.5]\n",
+        "new_pred = [compute_polynomial(new_x, weights[j]) for j in range(3)]\n",
+        "print(f\"\\nПроверка на новом входе {new_x}:\")\n",
+        "print(f\"Предсказание: {[round(p, 4) for p in new_pred]}\")\n",
+        "\n",
+        "# Вывод уравнений\n",
+        "print(\"\\nУравнения (округлены до 4 знаков):\")\n",
+        "for j in range(3):\n",
+        "    eq = f\"y{j+1} = {weights[j][0]:.4f} + {weights[j][1]:.4f}*x1 + {weights[j][2]:.4f}*x2 + \"\n",
+        "    eq += f\"{weights[j][3]:.4f}*x1² + {weights[j][4]:.4f}*x2² + \"\n",
+        "    eq += f\"{weights[j][5]:.4f}*x1x2 + \"\n",
+        "    eq += f\"{weights[j][6]:.4f}*x1²x2 + {weights[j][7]:.4f}*x1x2² + \"\n",
+        "    eq += f\"{weights[j][8]:.4f}*x1²x2²\"\n",
+        "    print(eq)"
+      ],
+      "metadata": {
+        "id": "ErQOgsNgp82p",
+        "outputId": "3e58501f-89aa-4cf7-8d6c-4a06fcf44f48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Эпоха 0, Ошибка: 14.262752\n",
+            "Эпоха 1000, Ошибка: 0.001102\n",
+            "Эпоха 2000, Ошибка: 0.000001\n",
+            "Эпоха 3000, Ошибка: 0.000000\n",
+            "Эпоха 4000, Ошибка: 0.000000\n",
+            "Эпоха 5000, Ошибка: 0.000000\n",
+            "Эпоха 6000, Ошибка: 0.000000\n",
+            "Эпоха 7000, Ошибка: 0.000000\n",
+            "Эпоха 8000, Ошибка: 0.000000\n",
+            "Эпоха 9000, Ошибка: 0.000000\n",
+            "\n",
+            "Результаты на обучающей выборке:\n",
+            "Вход -> Предсказание (Истинное значение)\n",
+            "[0, 0] -> [-0.0, 0.0, 0.0] ([0, 0, 0])\n",
+            "[0, 1] -> [0.0, 1.0, 1.0] ([0, 1, 1])\n",
+            "[1, 0] -> [0.0, 1.0, 1.0] ([0, 1, 1])\n",
+            "[1, 1] -> [1.0, 0.0, 1.0] ([1, 0, 1])\n",
+            "\n",
+            "Проверка на новом входе [0.5, 0.5]:\n",
+            "Предсказание: [0.1892, 0.5137, 0.5905]\n",
+            "\n",
+            "Уравнения (округлены до 4 знаков):\n",
+            "y1 = -0.0000 + 0.2810*x1 + -0.0484*x2 + -0.2810*x1² + 0.0484*x2² + 0.1353*x1x2 + 0.1521*x1²x2 + 0.5379*x1x2² + 0.1747*x1²x2²\n",
+            "y2 = 0.0000 + 0.5397*x1 + 0.7569*x2 + 0.4603*x1² + 0.2431*x2² + -0.5962*x1x2 + -0.3281*x1²x2 + -0.8510*x1x2² + -0.2247*x1²x2²\n",
+            "y3 = 0.0000 + 0.4018*x1 + 0.5028*x2 + 0.5982*x1² + 0.4972*x2² + -0.1790*x1x2 + -0.6719*x1²x2 + 0.0393*x1x2² + -0.1885*x1²x2²\n"
           ]
         }
       ]
